// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileApp — full output snapshots > minimalSpec 1`] = `
"================ app/README.md ================
# Notes

Generated by \`@openrupiv/compiler\` from [\`spec.json\`](./spec.json). Do not
edit these files by hand — edit the spec and recompile; the same spec always
produces byte-identical output (ADR-0001).

| | |
|---|---|
| Slug | \`notes\` |
| App version | \`0.1.0\` |
| Spec version | \`0.1\` |
| Roles | none declared |

## Contents

| File | Purpose |
|---|---|
| \`spec.json\` | Canonical app spec — the contract |
| \`migrations/0001_init.sql\` | Database schema (versioned, forward-only) |
| \`package.json\`, \`test/\` | Standalone invariant tests — \`node --test\`, zero dependencies |
| \`server.mjs\` | Optional entry: serve this directory with \`@openrupiv/runtime\` |

## Entities

### Note

SQL table: \`note\` · API base path: \`/api/note\`

| Field | Type | Column | SQL type | Constraints | Default |
|---|---|---|---|---|---|
| \`title\` | string | \`title\` | \`text\` | required | — |
| \`body\` | text | \`body\` | \`text\` | — | — |

Every entity table also carries \`id uuid\` (primary key), \`created_at\`, and
\`updated_at\` — set by the database, never by clients.

## Workflows

This app declares no workflows.

## Pages

This app declares no pages.

## HTTP routes

Served by \`@openrupiv/runtime\`. Every route requires an authenticated OIDC
session except \`/healthz\`, \`/auth/login\`, and \`/auth/callback\`. There is no
DELETE in v0. Workflow state fields cannot be written through create/update.

| Method | Path | Purpose |
|---|---|---|
| GET | \`/healthz\` | Liveness probe (no auth) |
| GET | \`/auth/login\` | Start OIDC login (Authorization Code + PKCE) |
| GET | \`/auth/callback\` | OIDC redirect target; establishes the session |
| POST | \`/auth/logout\` | Destroy the session |
| GET | \`/\` | Index of pages |
| GET | \`/api/note\` | List Note records |
| POST | \`/api/note\` | Create a Note |
| GET | \`/api/note/:id\` | Fetch one Note |
| PUT | \`/api/note/:id\` | Update a Note |

## Running this app

- **Tests** (zero installs, Node ≥ 20): \`node --test\`
- **Serve with the runtime library:** install \`@openrupiv/runtime\`, then
  \`node server.mjs\`. Configuration comes from the environment:
  \`DATABASE_URL\`, \`OIDC_ISSUER\`, \`OIDC_CLIENT_ID\`, \`OIDC_CLIENT_SECRET\`,
  \`SESSION_SECRET\`, \`BASE_URL\`. Authentication is OIDC only — there is no
  local-password mode (ADR-0003).
- **Or via the workspace Compose stack:** \`docker compose up\` from the
  workspace root (bundles Postgres and a dev-only Dex IdP, ADR-0002).

================ app/migrations/0001_init.sql ================
CREATE EXTENSION IF NOT EXISTS pgcrypto;

-- Migration 0001_init for app "notes" v0.1.0 (spec v0.1).
-- Generated by @openrupiv/compiler as a deterministic projection of app/spec.json.
-- Forward-only: never edit a migration after it has been applied; add a new one.

CREATE TABLE note (
  id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  title text NOT NULL,
  body text,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

================ app/package.json ================
{
  "name": "notes",
  "private": true,
  "type": "module",
  "scripts": {
    "test": "node --test"
  }
}

================ app/server.mjs ================
// Optional server entry — generated by @openrupiv/compiler.
//
// This app directory is declarative data (ADR-0004). Serving it requires the
// @openrupiv/runtime library (Apache-2.0), or anything else that implements
// the documented app-directory contract. The directory itself has zero
// dependencies; install @openrupiv/runtime next to it to use this entry, or
// run the app through the workspace's Docker Compose stack.

const appDir = new URL(".", import.meta.url).pathname;

let runtime;
try {
  runtime = await import("@openrupiv/runtime");
} catch {
  console.error(
    JSON.stringify({
      error: "ERR_RUNTIME_NOT_INSTALLED",
      message:
        "@openrupiv/runtime could not be imported. server.mjs is an optional entry: " +
        "install @openrupiv/runtime (Node >= 20) and retry, or serve this directory " +
        "with the openrupiv Compose stack. The app directory itself is dependency-free " +
        "data; only serving it needs the runtime library.",
    }),
  );
  process.exit(1);
}

await runtime.serveAppDir(appDir);

================ app/spec.json ================
{
  "specVersion": "0.1",
  "app": {
    "name": "Notes",
    "slug": "notes",
    "version": "0.1.0"
  },
  "entities": [
    {
      "name": "Note",
      "fields": [
        {
          "name": "title",
          "type": "string",
          "required": true
        },
        {
          "name": "body",
          "type": "text"
        }
      ]
    }
  ]
}

================ app/test/spec.test.mjs ================
// Invariant tests for the "notes" app directory.
// Generated by @openrupiv/compiler. Runs standalone with plain Node >= 20:
//
//   node --test
//
// Zero dependencies by design: node:test and node:assert only. The app
// directory is declarative data (ADR-0004); these tests check its internal
// consistency without any platform code.
import { test } from "node:test";
import assert from "node:assert/strict";
import { readFileSync } from "node:fs";

const rawSpec = readFileSync(new URL("../spec.json", import.meta.url), "utf8");
const migration = readFileSync(
  new URL("../migrations/0001_init.sql", import.meta.url),
  "utf8",
);

let spec = null;
let specParseError = null;
try {
  spec = JSON.parse(rawSpec);
} catch (error) {
  specParseError = error;
}

function requireSpec() {
  assert.equal(
    specParseError,
    null,
    "spec.json must parse as JSON: " + specParseError,
  );
  assert.ok(
    spec !== null && typeof spec === "object" && !Array.isArray(spec),
    "spec.json must be a JSON object",
  );
  return spec;
}

// Must mirror the compiler's SQL naming convention exactly:
// PascalCase/camelCase -> snake_case.
function snakeCase(name) {
  return name
    .replace(/([A-Z]+)([A-Z][a-z])/g, "$1_$2")
    .replace(/([a-z0-9])([A-Z])/g, "$1_$2")
    .toLowerCase();
}

test("spec.json parses as a JSON object", () => {
  requireSpec();
});

test("specVersion is 0.1", () => {
  assert.equal(requireSpec().specVersion, "0.1");
});

test("every workflow state exists on its entity's state field", () => {
  const s = requireSpec();
  for (const workflow of s.workflows ?? []) {
    const entity = (s.entities ?? []).find(
      (candidate) => candidate.name === workflow.entity,
    );
    assert.ok(
      entity,
      "workflow " + workflow.name + " names missing entity " + workflow.entity,
    );
    const stateField = (entity.fields ?? []).find(
      (field) => field.name === workflow.stateField,
    );
    assert.ok(
      stateField,
      "workflow " + workflow.name + " names missing state field " + workflow.stateField,
    );
    assert.equal(
      stateField.type,
      "enum",
      "state field " + workflow.stateField + " must be an enum",
    );
    const states = new Set(stateField.values ?? []);
    assert.ok(
      states.has(workflow.initial),
      "initial state " + workflow.initial + " is not a declared state",
    );
    for (const transition of workflow.transitions ?? []) {
      assert.ok(
        states.has(transition.from),
        "transition " + transition.name + " from-state " + transition.from + " is not a declared state",
      );
      assert.ok(
        states.has(transition.to),
        "transition " + transition.name + " to-state " + transition.to + " is not a declared state",
      );
    }
  }
});

test("every approval transition requires at least 2 distinct approvers", () => {
  const s = requireSpec();
  for (const workflow of s.workflows ?? []) {
    for (const transition of workflow.transitions ?? []) {
      if (transition.approval === undefined) continue;
      assert.ok(
        Number.isInteger(transition.approval.count) && transition.approval.count >= 2,
        "approval on transition " + transition.name + " must require >= 2 distinct approvers, got " + transition.approval.count,
      );
    }
  }
});

test("the migration creates every table the spec requires", () => {
  const s = requireSpec();
  const tables = [];
  for (const entity of s.entities ?? []) {
    tables.push(snakeCase(entity.name));
    for (const relation of entity.relations ?? []) {
      tables.push(snakeCase(entity.name) + "_" + snakeCase(relation.name));
    }
  }
  assert.ok(tables.length > 0, "spec must declare at least one entity");
  for (const table of tables) {
    assert.ok(
      migration.includes("CREATE TABLE " + table + " ("),
      "migration must create table " + table,
    );
  }
});

test("the migration enables pgcrypto before using gen_random_uuid()", () => {
  assert.ok(
    migration.startsWith("CREATE EXTENSION IF NOT EXISTS pgcrypto;"),
    "migration must start with the pgcrypto extension",
  );
});
"
`;

exports[`compileApp — full output snapshots > projectTrackerSpec 1`] = `
"================ app/README.md ================
# Project Tracker

Generated by \`@openrupiv/compiler\` from [\`spec.json\`](./spec.json). Do not
edit these files by hand — edit the spec and recompile; the same spec always
produces byte-identical output (ADR-0001).

| | |
|---|---|
| Slug | \`project-tracker\` |
| App version | \`0.1.0\` |
| Spec version | \`0.1\` |
| Roles | \`member\`, \`lead\` |

## Contents

| File | Purpose |
|---|---|
| \`spec.json\` | Canonical app spec — the contract |
| \`migrations/0001_init.sql\` | Database schema (versioned, forward-only) |
| \`package.json\`, \`test/\` | Standalone invariant tests — \`node --test\`, zero dependencies |
| \`server.mjs\` | Optional entry: serve this directory with \`@openrupiv/runtime\` |

## Entities

### Project

SQL table: \`project\` · API base path: \`/api/project\`

| Field | Type | Column | SQL type | Constraints | Default |
|---|---|---|---|---|---|
| \`name\` | string | \`name\` | \`text\` | required, unique | — |
| \`budget\` | number | \`budget\` | \`double precision\` | — | — |
| \`dueDate\` | date | \`due_date\` | \`date\` | — | — |
| \`phase\` | enum(planned, active, done) | \`phase\` | \`text\` | required | \`"planned"\` |

Relations:

| Relation | Kind | Target | Join table |
|---|---|---|---|
| \`tags\` | manyToMany | Tag | \`project_tags\` |

### Tag

SQL table: \`tag\` · API base path: \`/api/tag\`

| Field | Type | Column | SQL type | Constraints | Default |
|---|---|---|---|---|---|
| \`label\` | string | \`label\` | \`text\` | required, unique | — |

Every entity table also carries \`id uuid\` (primary key), \`created_at\`, and
\`updated_at\` — set by the database, never by clients.

## Workflows

### \`project-lifecycle\` — Project.phase

State machine on \`Project.phase\`; initial state \`planned\`.
The \`phase\` field is read-only through the create/update API:
the server sets the initial value on create, and the transitions below are
the only writer.

\`\`\`
[*] --> planned
planned --kick-off--> active   [roles: lead] [budget > 0]
active --complete--> done   [dueDate is set]
\`\`\`

| Transition | From | To | Guard roles | Guard predicates | Approvals required |
|---|---|---|---|---|---|
| \`kick-off\` | \`planned\` | \`active\` | \`lead\` | budget > 0 | — |
| \`complete\` | \`active\` | \`done\` | — | dueDate is set | — |

## Pages

| Page | Route | Type | Entity | Title | Fields |
|---|---|---|---|---|---|
| \`projects\` | \`/p/projects\` | list | Project | projects | all fields |
| \`project-form\` | \`/p/project-form\` | form | Project | project-form | all fields |
| \`tags\` | \`/p/tags\` | list | Tag | tags | all fields |

## HTTP routes

Served by \`@openrupiv/runtime\`. Every route requires an authenticated OIDC
session except \`/healthz\`, \`/auth/login\`, and \`/auth/callback\`. There is no
DELETE in v0. Workflow state fields cannot be written through create/update.

| Method | Path | Purpose |
|---|---|---|
| GET | \`/healthz\` | Liveness probe (no auth) |
| GET | \`/auth/login\` | Start OIDC login (Authorization Code + PKCE) |
| GET | \`/auth/callback\` | OIDC redirect target; establishes the session |
| POST | \`/auth/logout\` | Destroy the session |
| GET | \`/\` | Index of pages |
| GET | \`/api/project\` | List Project records |
| POST | \`/api/project\` | Create a Project |
| GET | \`/api/project/:id\` | Fetch one Project |
| PUT | \`/api/project/:id\` | Update a Project |
| GET | \`/api/tag\` | List Tag records |
| POST | \`/api/tag\` | Create a Tag |
| GET | \`/api/tag/:id\` | Fetch one Tag |
| PUT | \`/api/tag/:id\` | Update a Tag |
| POST | \`/api/project/:id/transitions/kick-off\` | Fire \`kick-off\` (planned → active) |
| POST | \`/api/project/:id/transitions/complete\` | Fire \`complete\` (active → done) |
| GET | \`/p/projects\` | Page \`projects\` (list of Project) |
| GET | \`/p/project-form\` | Page \`project-form\` (form of Project) |
| GET | \`/p/tags\` | Page \`tags\` (list of Tag) |

Transition endpoints respond \`{ "status": "pending", "approvals": k, "required": n }\`
while approvals are outstanding and \`{ "status": "transitioned", "state": "<to>" }\` on
completion. Failures: 403 \`ERR_FORBIDDEN_ROLE\`; 409 \`ERR_BAD_STATE\`,
\`ERR_GUARD_FAILED\`, or \`ERR_DUPLICATE_APPROVER\` (the same user may not
approve twice — approvals must come from distinct authenticated users).

## Running this app

- **Tests** (zero installs, Node ≥ 20): \`node --test\`
- **Serve with the runtime library:** install \`@openrupiv/runtime\`, then
  \`node server.mjs\`. Configuration comes from the environment:
  \`DATABASE_URL\`, \`OIDC_ISSUER\`, \`OIDC_CLIENT_ID\`, \`OIDC_CLIENT_SECRET\`,
  \`SESSION_SECRET\`, \`BASE_URL\`. Authentication is OIDC only — there is no
  local-password mode (ADR-0003).
- **Or via the workspace Compose stack:** \`docker compose up\` from the
  workspace root (bundles Postgres and a dev-only Dex IdP, ADR-0002).

================ app/migrations/0001_init.sql ================
CREATE EXTENSION IF NOT EXISTS pgcrypto;

-- Migration 0001_init for app "project-tracker" v0.1.0 (spec v0.1).
-- Generated by @openrupiv/compiler as a deterministic projection of app/spec.json.
-- Forward-only: never edit a migration after it has been applied; add a new one.

CREATE TABLE project (
  id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  name text NOT NULL UNIQUE,
  budget double precision,
  due_date date,
  phase text NOT NULL DEFAULT 'planned' CHECK (phase IN ('planned', 'active', 'done')),
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE tag (
  id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  label text NOT NULL UNIQUE,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE project_tags (
  project_id uuid NOT NULL REFERENCES project(id),
  tag_id uuid NOT NULL REFERENCES tag(id),
  PRIMARY KEY (project_id, tag_id)
);

================ app/package.json ================
{
  "name": "project-tracker",
  "private": true,
  "type": "module",
  "scripts": {
    "test": "node --test"
  }
}

================ app/server.mjs ================
// Optional server entry — generated by @openrupiv/compiler.
//
// This app directory is declarative data (ADR-0004). Serving it requires the
// @openrupiv/runtime library (Apache-2.0), or anything else that implements
// the documented app-directory contract. The directory itself has zero
// dependencies; install @openrupiv/runtime next to it to use this entry, or
// run the app through the workspace's Docker Compose stack.

const appDir = new URL(".", import.meta.url).pathname;

let runtime;
try {
  runtime = await import("@openrupiv/runtime");
} catch {
  console.error(
    JSON.stringify({
      error: "ERR_RUNTIME_NOT_INSTALLED",
      message:
        "@openrupiv/runtime could not be imported. server.mjs is an optional entry: " +
        "install @openrupiv/runtime (Node >= 20) and retry, or serve this directory " +
        "with the openrupiv Compose stack. The app directory itself is dependency-free " +
        "data; only serving it needs the runtime library.",
    }),
  );
  process.exit(1);
}

await runtime.serveAppDir(appDir);

================ app/spec.json ================
{
  "specVersion": "0.1",
  "app": {
    "name": "Project Tracker",
    "slug": "project-tracker",
    "version": "0.1.0",
    "roles": [
      "member",
      "lead"
    ]
  },
  "entities": [
    {
      "name": "Project",
      "fields": [
        {
          "name": "name",
          "type": "string",
          "required": true,
          "unique": true
        },
        {
          "name": "budget",
          "type": "number"
        },
        {
          "name": "dueDate",
          "type": "date"
        },
        {
          "name": "phase",
          "type": "enum",
          "required": true,
          "values": [
            "planned",
            "active",
            "done"
          ],
          "default": "planned"
        }
      ],
      "relations": [
        {
          "name": "tags",
          "kind": "manyToMany",
          "to": "Tag"
        }
      ]
    },
    {
      "name": "Tag",
      "fields": [
        {
          "name": "label",
          "type": "string",
          "required": true,
          "unique": true
        }
      ]
    }
  ],
  "pages": [
    {
      "name": "projects",
      "type": "list",
      "entity": "Project"
    },
    {
      "name": "project-form",
      "type": "form",
      "entity": "Project"
    },
    {
      "name": "tags",
      "type": "list",
      "entity": "Tag"
    }
  ],
  "workflows": [
    {
      "name": "project-lifecycle",
      "entity": "Project",
      "stateField": "phase",
      "initial": "planned",
      "transitions": [
        {
          "name": "kick-off",
          "from": "planned",
          "to": "active",
          "guard": {
            "roles": [
              "lead"
            ],
            "require": [
              {
                "field": "budget",
                "op": "gt",
                "value": 0
              }
            ]
          }
        },
        {
          "name": "complete",
          "from": "active",
          "to": "done",
          "guard": {
            "require": [
              {
                "field": "dueDate",
                "op": "set"
              }
            ]
          }
        }
      ]
    }
  ]
}

================ app/test/spec.test.mjs ================
// Invariant tests for the "project-tracker" app directory.
// Generated by @openrupiv/compiler. Runs standalone with plain Node >= 20:
//
//   node --test
//
// Zero dependencies by design: node:test and node:assert only. The app
// directory is declarative data (ADR-0004); these tests check its internal
// consistency without any platform code.
import { test } from "node:test";
import assert from "node:assert/strict";
import { readFileSync } from "node:fs";

const rawSpec = readFileSync(new URL("../spec.json", import.meta.url), "utf8");
const migration = readFileSync(
  new URL("../migrations/0001_init.sql", import.meta.url),
  "utf8",
);

let spec = null;
let specParseError = null;
try {
  spec = JSON.parse(rawSpec);
} catch (error) {
  specParseError = error;
}

function requireSpec() {
  assert.equal(
    specParseError,
    null,
    "spec.json must parse as JSON: " + specParseError,
  );
  assert.ok(
    spec !== null && typeof spec === "object" && !Array.isArray(spec),
    "spec.json must be a JSON object",
  );
  return spec;
}

// Must mirror the compiler's SQL naming convention exactly:
// PascalCase/camelCase -> snake_case.
function snakeCase(name) {
  return name
    .replace(/([A-Z]+)([A-Z][a-z])/g, "$1_$2")
    .replace(/([a-z0-9])([A-Z])/g, "$1_$2")
    .toLowerCase();
}

test("spec.json parses as a JSON object", () => {
  requireSpec();
});

test("specVersion is 0.1", () => {
  assert.equal(requireSpec().specVersion, "0.1");
});

test("every workflow state exists on its entity's state field", () => {
  const s = requireSpec();
  for (const workflow of s.workflows ?? []) {
    const entity = (s.entities ?? []).find(
      (candidate) => candidate.name === workflow.entity,
    );
    assert.ok(
      entity,
      "workflow " + workflow.name + " names missing entity " + workflow.entity,
    );
    const stateField = (entity.fields ?? []).find(
      (field) => field.name === workflow.stateField,
    );
    assert.ok(
      stateField,
      "workflow " + workflow.name + " names missing state field " + workflow.stateField,
    );
    assert.equal(
      stateField.type,
      "enum",
      "state field " + workflow.stateField + " must be an enum",
    );
    const states = new Set(stateField.values ?? []);
    assert.ok(
      states.has(workflow.initial),
      "initial state " + workflow.initial + " is not a declared state",
    );
    for (const transition of workflow.transitions ?? []) {
      assert.ok(
        states.has(transition.from),
        "transition " + transition.name + " from-state " + transition.from + " is not a declared state",
      );
      assert.ok(
        states.has(transition.to),
        "transition " + transition.name + " to-state " + transition.to + " is not a declared state",
      );
    }
  }
});

test("every approval transition requires at least 2 distinct approvers", () => {
  const s = requireSpec();
  for (const workflow of s.workflows ?? []) {
    for (const transition of workflow.transitions ?? []) {
      if (transition.approval === undefined) continue;
      assert.ok(
        Number.isInteger(transition.approval.count) && transition.approval.count >= 2,
        "approval on transition " + transition.name + " must require >= 2 distinct approvers, got " + transition.approval.count,
      );
    }
  }
});

test("the migration creates every table the spec requires", () => {
  const s = requireSpec();
  const tables = [];
  for (const entity of s.entities ?? []) {
    tables.push(snakeCase(entity.name));
    for (const relation of entity.relations ?? []) {
      tables.push(snakeCase(entity.name) + "_" + snakeCase(relation.name));
    }
  }
  assert.ok(tables.length > 0, "spec must declare at least one entity");
  for (const table of tables) {
    assert.ok(
      migration.includes("CREATE TABLE " + table + " ("),
      "migration must create table " + table,
    );
  }
});

test("the migration enables pgcrypto before using gen_random_uuid()", () => {
  assert.ok(
    migration.startsWith("CREATE EXTENSION IF NOT EXISTS pgcrypto;"),
    "migration must start with the pgcrypto extension",
  );
});
"
`;

exports[`compileApp — full output snapshots > vendorOnboardingSpec 1`] = `
"================ app/README.md ================
# Vendor Onboarding

Approval workflow for onboarding new vendors with 4-eyes review.

Generated by \`@openrupiv/compiler\` from [\`spec.json\`](./spec.json). Do not
edit these files by hand — edit the spec and recompile; the same spec always
produces byte-identical output (ADR-0001).

| | |
|---|---|
| Slug | \`vendor-onboarding\` |
| App version | \`0.1.0\` |
| Spec version | \`0.1\` |
| Roles | \`requester\`, \`reviewer\`, \`compliance\` |

## Contents

| File | Purpose |
|---|---|
| \`spec.json\` | Canonical app spec — the contract |
| \`migrations/0001_init.sql\` | Database schema (versioned, forward-only) |
| \`package.json\`, \`test/\` | Standalone invariant tests — \`node --test\`, zero dependencies |
| \`server.mjs\` | Optional entry: serve this directory with \`@openrupiv/runtime\` |

## Entities

### Vendor

A company we may do business with.

SQL table: \`vendor\` · API base path: \`/api/vendor\`

| Field | Type | Column | SQL type | Constraints | Default |
|---|---|---|---|---|---|
| \`name\` | string | \`name\` | \`text\` | required, unique | — |
| \`contactEmail\` | string | \`contact_email\` | \`text\` | required | — |
| \`country\` | string | \`country\` | \`text\` | — | — |
| \`riskTier\` | enum(low, medium, high) | \`risk_tier\` | \`text\` | — | \`"medium"\` |

### VendorApplication

A request to onboard a vendor.

SQL table: \`vendor_application\` · API base path: \`/api/vendor-application\`

| Field | Type | Column | SQL type | Constraints | Default |
|---|---|---|---|---|---|
| \`vendor\` | reference → Vendor | \`vendor_id\` | \`uuid\` | required | — |
| \`justification\` | text | \`justification\` | \`text\` | required | — |
| \`annualSpend\` | number | \`annual_spend\` | \`double precision\` | — | — |
| \`status\` | enum(draft, submitted, in_review, approved, rejected) | \`status\` | \`text\` | required | \`"draft"\` |

Every entity table also carries \`id uuid\` (primary key), \`created_at\`, and
\`updated_at\` — set by the database, never by clients.

## Workflows

### \`vendor-approval\` — VendorApplication.status

State machine on \`VendorApplication.status\`; initial state \`draft\`.
The \`status\` field is read-only through the create/update API:
the server sets the initial value on create, and the transitions below are
the only writer.

\`\`\`
[*] --> draft
draft --submit--> submitted   [roles: requester]
submitted --start-review--> in_review   [roles: reviewer]
in_review --approve--> approved   [roles: reviewer, compliance] [2 distinct approvers]
in_review --reject--> rejected   [roles: reviewer, compliance]
\`\`\`

| Transition | From | To | Guard roles | Guard predicates | Approvals required |
|---|---|---|---|---|---|
| \`submit\` | \`draft\` | \`submitted\` | \`requester\` | — | — |
| \`start-review\` | \`submitted\` | \`in_review\` | \`reviewer\` | — | — |
| \`approve\` | \`in_review\` | \`approved\` | \`reviewer\`, \`compliance\` | — | 2 distinct approvers (\`reviewer\`, \`compliance\`) |
| \`reject\` | \`in_review\` | \`rejected\` | \`reviewer\`, \`compliance\` | — | — |

## Pages

| Page | Route | Type | Entity | Title | Fields |
|---|---|---|---|---|---|
| \`vendors\` | \`/p/vendors\` | list | Vendor | Vendors | all fields |
| \`vendor-form\` | \`/p/vendor-form\` | form | Vendor | New vendor | all fields |
| \`applications\` | \`/p/applications\` | list | VendorApplication | Applications | \`vendor\`, \`status\`, \`annualSpend\` |
| \`application-detail\` | \`/p/application-detail\` | detail | VendorApplication | Application | all fields |
| \`application-form\` | \`/p/application-form\` | form | VendorApplication | New application | \`vendor\`, \`justification\`, \`annualSpend\` |

## HTTP routes

Served by \`@openrupiv/runtime\`. Every route requires an authenticated OIDC
session except \`/healthz\`, \`/auth/login\`, and \`/auth/callback\`. There is no
DELETE in v0. Workflow state fields cannot be written through create/update.

| Method | Path | Purpose |
|---|---|---|
| GET | \`/healthz\` | Liveness probe (no auth) |
| GET | \`/auth/login\` | Start OIDC login (Authorization Code + PKCE) |
| GET | \`/auth/callback\` | OIDC redirect target; establishes the session |
| POST | \`/auth/logout\` | Destroy the session |
| GET | \`/\` | Index of pages |
| GET | \`/api/vendor\` | List Vendor records |
| POST | \`/api/vendor\` | Create a Vendor |
| GET | \`/api/vendor/:id\` | Fetch one Vendor |
| PUT | \`/api/vendor/:id\` | Update a Vendor |
| GET | \`/api/vendor-application\` | List VendorApplication records |
| POST | \`/api/vendor-application\` | Create a VendorApplication |
| GET | \`/api/vendor-application/:id\` | Fetch one VendorApplication |
| PUT | \`/api/vendor-application/:id\` | Update a VendorApplication |
| POST | \`/api/vendor-application/:id/transitions/submit\` | Fire \`submit\` (draft → submitted) |
| POST | \`/api/vendor-application/:id/transitions/start-review\` | Fire \`start-review\` (submitted → in_review) |
| POST | \`/api/vendor-application/:id/transitions/approve\` | Fire \`approve\` (in_review → approved) |
| POST | \`/api/vendor-application/:id/transitions/reject\` | Fire \`reject\` (in_review → rejected) |
| GET | \`/p/vendors\` | Page \`vendors\` (list of Vendor) |
| GET | \`/p/vendor-form\` | Page \`vendor-form\` (form of Vendor) |
| GET | \`/p/applications\` | Page \`applications\` (list of VendorApplication) |
| GET | \`/p/application-detail\` | Page \`application-detail\` (detail of VendorApplication) |
| GET | \`/p/application-form\` | Page \`application-form\` (form of VendorApplication) |

Transition endpoints respond \`{ "status": "pending", "approvals": k, "required": n }\`
while approvals are outstanding and \`{ "status": "transitioned", "state": "<to>" }\` on
completion. Failures: 403 \`ERR_FORBIDDEN_ROLE\`; 409 \`ERR_BAD_STATE\`,
\`ERR_GUARD_FAILED\`, or \`ERR_DUPLICATE_APPROVER\` (the same user may not
approve twice — approvals must come from distinct authenticated users).

## Running this app

- **Tests** (zero installs, Node ≥ 20): \`node --test\`
- **Serve with the runtime library:** install \`@openrupiv/runtime\`, then
  \`node server.mjs\`. Configuration comes from the environment:
  \`DATABASE_URL\`, \`OIDC_ISSUER\`, \`OIDC_CLIENT_ID\`, \`OIDC_CLIENT_SECRET\`,
  \`SESSION_SECRET\`, \`BASE_URL\`. Authentication is OIDC only — there is no
  local-password mode (ADR-0003).
- **Or via the workspace Compose stack:** \`docker compose up\` from the
  workspace root (bundles Postgres and a dev-only Dex IdP, ADR-0002).

================ app/migrations/0001_init.sql ================
CREATE EXTENSION IF NOT EXISTS pgcrypto;

-- Migration 0001_init for app "vendor-onboarding" v0.1.0 (spec v0.1).
-- Generated by @openrupiv/compiler as a deterministic projection of app/spec.json.
-- Forward-only: never edit a migration after it has been applied; add a new one.

CREATE TABLE vendor (
  id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  name text NOT NULL UNIQUE,
  contact_email text NOT NULL,
  country text,
  risk_tier text DEFAULT 'medium' CHECK (risk_tier IN ('low', 'medium', 'high')),
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE vendor_application (
  id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  vendor_id uuid NOT NULL REFERENCES vendor(id),
  justification text NOT NULL,
  annual_spend double precision,
  status text NOT NULL DEFAULT 'draft' CHECK (status IN ('draft', 'submitted', 'in_review', 'approved', 'rejected')),
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

================ app/package.json ================
{
  "name": "vendor-onboarding",
  "private": true,
  "type": "module",
  "scripts": {
    "test": "node --test"
  }
}

================ app/server.mjs ================
// Optional server entry — generated by @openrupiv/compiler.
//
// This app directory is declarative data (ADR-0004). Serving it requires the
// @openrupiv/runtime library (Apache-2.0), or anything else that implements
// the documented app-directory contract. The directory itself has zero
// dependencies; install @openrupiv/runtime next to it to use this entry, or
// run the app through the workspace's Docker Compose stack.

const appDir = new URL(".", import.meta.url).pathname;

let runtime;
try {
  runtime = await import("@openrupiv/runtime");
} catch {
  console.error(
    JSON.stringify({
      error: "ERR_RUNTIME_NOT_INSTALLED",
      message:
        "@openrupiv/runtime could not be imported. server.mjs is an optional entry: " +
        "install @openrupiv/runtime (Node >= 20) and retry, or serve this directory " +
        "with the openrupiv Compose stack. The app directory itself is dependency-free " +
        "data; only serving it needs the runtime library.",
    }),
  );
  process.exit(1);
}

await runtime.serveAppDir(appDir);

================ app/spec.json ================
{
  "specVersion": "0.1",
  "app": {
    "name": "Vendor Onboarding",
    "slug": "vendor-onboarding",
    "description": "Approval workflow for onboarding new vendors with 4-eyes review.",
    "version": "0.1.0",
    "roles": [
      "requester",
      "reviewer",
      "compliance"
    ]
  },
  "entities": [
    {
      "name": "Vendor",
      "description": "A company we may do business with.",
      "fields": [
        {
          "name": "name",
          "type": "string",
          "required": true,
          "unique": true
        },
        {
          "name": "contactEmail",
          "type": "string",
          "required": true
        },
        {
          "name": "country",
          "type": "string"
        },
        {
          "name": "riskTier",
          "type": "enum",
          "values": [
            "low",
            "medium",
            "high"
          ],
          "default": "medium"
        }
      ]
    },
    {
      "name": "VendorApplication",
      "description": "A request to onboard a vendor.",
      "fields": [
        {
          "name": "vendor",
          "type": "reference",
          "entity": "Vendor",
          "required": true
        },
        {
          "name": "justification",
          "type": "text",
          "required": true
        },
        {
          "name": "annualSpend",
          "type": "number"
        },
        {
          "name": "status",
          "type": "enum",
          "required": true,
          "values": [
            "draft",
            "submitted",
            "in_review",
            "approved",
            "rejected"
          ],
          "default": "draft"
        }
      ]
    }
  ],
  "pages": [
    {
      "name": "vendors",
      "type": "list",
      "entity": "Vendor",
      "title": "Vendors"
    },
    {
      "name": "vendor-form",
      "type": "form",
      "entity": "Vendor",
      "title": "New vendor"
    },
    {
      "name": "applications",
      "type": "list",
      "entity": "VendorApplication",
      "title": "Applications",
      "fields": [
        "vendor",
        "status",
        "annualSpend"
      ]
    },
    {
      "name": "application-detail",
      "type": "detail",
      "entity": "VendorApplication",
      "title": "Application"
    },
    {
      "name": "application-form",
      "type": "form",
      "entity": "VendorApplication",
      "title": "New application",
      "fields": [
        "vendor",
        "justification",
        "annualSpend"
      ]
    }
  ],
  "workflows": [
    {
      "name": "vendor-approval",
      "entity": "VendorApplication",
      "stateField": "status",
      "initial": "draft",
      "transitions": [
        {
          "name": "submit",
          "from": "draft",
          "to": "submitted",
          "guard": {
            "roles": [
              "requester"
            ]
          }
        },
        {
          "name": "start-review",
          "from": "submitted",
          "to": "in_review",
          "guard": {
            "roles": [
              "reviewer"
            ]
          }
        },
        {
          "name": "approve",
          "from": "in_review",
          "to": "approved",
          "guard": {
            "roles": [
              "reviewer",
              "compliance"
            ]
          },
          "approval": {
            "count": 2,
            "roles": [
              "reviewer",
              "compliance"
            ]
          }
        },
        {
          "name": "reject",
          "from": "in_review",
          "to": "rejected",
          "guard": {
            "roles": [
              "reviewer",
              "compliance"
            ]
          }
        }
      ]
    }
  ]
}

================ app/test/spec.test.mjs ================
// Invariant tests for the "vendor-onboarding" app directory.
// Generated by @openrupiv/compiler. Runs standalone with plain Node >= 20:
//
//   node --test
//
// Zero dependencies by design: node:test and node:assert only. The app
// directory is declarative data (ADR-0004); these tests check its internal
// consistency without any platform code.
import { test } from "node:test";
import assert from "node:assert/strict";
import { readFileSync } from "node:fs";

const rawSpec = readFileSync(new URL("../spec.json", import.meta.url), "utf8");
const migration = readFileSync(
  new URL("../migrations/0001_init.sql", import.meta.url),
  "utf8",
);

let spec = null;
let specParseError = null;
try {
  spec = JSON.parse(rawSpec);
} catch (error) {
  specParseError = error;
}

function requireSpec() {
  assert.equal(
    specParseError,
    null,
    "spec.json must parse as JSON: " + specParseError,
  );
  assert.ok(
    spec !== null && typeof spec === "object" && !Array.isArray(spec),
    "spec.json must be a JSON object",
  );
  return spec;
}

// Must mirror the compiler's SQL naming convention exactly:
// PascalCase/camelCase -> snake_case.
function snakeCase(name) {
  return name
    .replace(/([A-Z]+)([A-Z][a-z])/g, "$1_$2")
    .replace(/([a-z0-9])([A-Z])/g, "$1_$2")
    .toLowerCase();
}

test("spec.json parses as a JSON object", () => {
  requireSpec();
});

test("specVersion is 0.1", () => {
  assert.equal(requireSpec().specVersion, "0.1");
});

test("every workflow state exists on its entity's state field", () => {
  const s = requireSpec();
  for (const workflow of s.workflows ?? []) {
    const entity = (s.entities ?? []).find(
      (candidate) => candidate.name === workflow.entity,
    );
    assert.ok(
      entity,
      "workflow " + workflow.name + " names missing entity " + workflow.entity,
    );
    const stateField = (entity.fields ?? []).find(
      (field) => field.name === workflow.stateField,
    );
    assert.ok(
      stateField,
      "workflow " + workflow.name + " names missing state field " + workflow.stateField,
    );
    assert.equal(
      stateField.type,
      "enum",
      "state field " + workflow.stateField + " must be an enum",
    );
    const states = new Set(stateField.values ?? []);
    assert.ok(
      states.has(workflow.initial),
      "initial state " + workflow.initial + " is not a declared state",
    );
    for (const transition of workflow.transitions ?? []) {
      assert.ok(
        states.has(transition.from),
        "transition " + transition.name + " from-state " + transition.from + " is not a declared state",
      );
      assert.ok(
        states.has(transition.to),
        "transition " + transition.name + " to-state " + transition.to + " is not a declared state",
      );
    }
  }
});

test("every approval transition requires at least 2 distinct approvers", () => {
  const s = requireSpec();
  for (const workflow of s.workflows ?? []) {
    for (const transition of workflow.transitions ?? []) {
      if (transition.approval === undefined) continue;
      assert.ok(
        Number.isInteger(transition.approval.count) && transition.approval.count >= 2,
        "approval on transition " + transition.name + " must require >= 2 distinct approvers, got " + transition.approval.count,
      );
    }
  }
});

test("the migration creates every table the spec requires", () => {
  const s = requireSpec();
  const tables = [];
  for (const entity of s.entities ?? []) {
    tables.push(snakeCase(entity.name));
    for (const relation of entity.relations ?? []) {
      tables.push(snakeCase(entity.name) + "_" + snakeCase(relation.name));
    }
  }
  assert.ok(tables.length > 0, "spec must declare at least one entity");
  for (const table of tables) {
    assert.ok(
      migration.includes("CREATE TABLE " + table + " ("),
      "migration must create table " + table,
    );
  }
});

test("the migration enables pgcrypto before using gen_random_uuid()", () => {
  assert.ok(
    migration.startsWith("CREATE EXTENSION IF NOT EXISTS pgcrypto;"),
    "migration must start with the pgcrypto extension",
  );
});
"
`;
